--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -17,7 +17,7 @@
     <div class="card">
       <div class="card-header">头像</div>
       <img class="card-img-top" #headImg src="http://kanyun123.3vcm.net/touxiang.jpeg" alt="Card image cap">
-      <div class="card-block">
+      <div class="card-body">
         <a (click)="headModal.show()" href="javascript:void(0)" class="btn btn-primary">更换头像</a>
       </div>
     </div>
@@ -26,7 +26,7 @@
   <div class="col-sm-6 col-md-6">
     <div class="card card-default">
       <div class="card-header">个人资料</div>
-      <div class="card-block">
+      <div class="card-body">
 
       </div>
     </div>
@@ -34,7 +34,7 @@
   <div class="col-sm-6 col-md-3">
     <div class="card card-default">
       <div class="card-header">好友</div>
-      <div class="card-block">
+      <div class="card-body">
 
       </div>
     </div>
@@ -46,7 +46,7 @@
   <div class="col-sm-6 col-md-3">
     <div class="card card-info">
       <div class="card-header">统计信息</div>
-      <div class="card-block">
+      <div class="card-body">
         card content
       </div>
     </div>
@@ -54,7 +54,7 @@
   <div class="col-sm-6 col-md-6">
     <div class="card card-info">
       <div class="card-header">动态</div>
-      <div class="card-block">
+      <div class="card-body">
         card content
       </div>
     </div>
@@ -62,7 +62,7 @@
   <div class="col-sm-6 col-md-3">
     <div class="card card-default">
       <div class="card-header">最近访客</div>
-      <div class="card-block">
+      <div class="card-body">
 
       </div>
     </div>
