--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,78 +1,80 @@
 <div class="container container-fluid">
   <div class="row">
-    <div class="col-md-1">
-      <aside class="sidebar show perfectScrollbar">
-        <div id="solso-sidebar">
-          <div class="card-group" id="accordion" role="tablist" aria-multiselectable="true">
-
-            <div class="card">
-              <div class="card-header " role="tab">
-                <div class="input-group custom-search-form">
-                  <input type="text" class="form-control" placeholder="Search..." />
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
-                      <i class="fa fa-search"></i>
-                    </button>
-                  </span>
+    <div class="col-1">
+      <div class="col-1">
+        <aside class="sidebar show perfectScrollbar">
+          <div id="solso-sidebar">
+            <div class="card-group" id="accordion" role="tablist" aria-multiselectable="true">
+  
+              <div class="card">
+                <div class="card-header " role="tab">
+                  <div class="input-group custom-search-form">
+                    <input type="text" class="form-control" placeholder="Search..." />
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
-
-            <div class="card" routerLinkActive="active">
-              <div class="card-header " role="tab" id="heading1">
-                <h4 class="card-title">
-                  <a href="javascript:void(0)" class="single-item" [routerLink]="['/manager/dashboard']">
-                    <i class="fa fa-dashboard"></i> 主面板
-                  </a>
-                </h4>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card-header " role="tab" id="heading2">
-                <h4 class="card-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
-                    <i class="fa fa-bar-chart-o"></i> 试题管理
-                    <i class="pull-right fa fa-caret-down"></i>
-                  </a>
-                </h4>
-              </div>
-
-              <div id="collapse2" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading2">
-                <div>
-                  <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/addExam']">新增试题</a>
-                  <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updExam']">编辑试题</a>
+  
+              <div class="card" routerLinkActive="active">
+                <div class="card-header " role="tab" id="heading1">
+                  <h4 class="card-title">
+                    <a href="javascript:void(0)" class="single-item" [routerLink]="['/manager/dashboard']">
+                      <i class="fa fa-dashboard"></i> 主面板
+                    </a>
+                  </h4>
                 </div>
               </div>
-            </div>
-
-            <div class="card">
-              <div class="card-header " role="tab" id="heading3">
-                <h4 class="card-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-                    <i class="fa fa-bar-chart-o"></i> 用户管理
-                    <i class="pull-right fa fa-caret-down"></i>
-                  </a>
-                </h4>
-              </div>
-
-              <div id="collapse3" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading3">
-                <div>
-                  <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updUser']">用户管理</a>
+  
+              <div class="card">
+                <div class="card-header " role="tab" id="heading2">
+                  <h4 class="card-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                      <i class="fa fa-bar-chart-o"></i> 试题管理
+                      <i class="pull-right fa fa-caret-down"></i>
+                    </a>
+                  </h4>
+                </div>
+  
+                <div id="collapse2" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading2">
+                  <div>
+                    <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/addExam']">新增试题</a>
+                    <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updExam']">编辑试题</a>
+                  </div>
                 </div>
               </div>
+  
+              <div class="card">
+                <div class="card-header " role="tab" id="heading3">
+                  <h4 class="card-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                      <i class="fa fa-bar-chart-o"></i> 用户管理
+                      <i class="pull-right fa fa-caret-down"></i>
+                    </a>
+                  </h4>
+                </div>
+  
+                <div id="collapse3" class="card-collapse collapse in" role="tabcard" aria-labelledby="heading3">
+                  <div>
+                    <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updUser']">用户管理</a>
+                  </div>
+                </div>
+              </div>
+  
+  
             </div>
-
-
           </div>
-        </div>
-      </aside>
-    </div>
+        </aside>
+      </div>
 
-
-    <!--后台管理右侧内容-->
-    <div class="col-md-10">
-      <router-outlet></router-outlet>
     </div>
+  </div>
+
+  <!--后台管理右侧内容-->
+  <div class="col-10">
+    <router-outlet></router-outlet>
   </div>
 </div>
