--- a/src/app/manager/user/upd-user/upd-user.component.html
+++ b/src/app/manager/user/upd-user/upd-user.component.html
@@ -1,8 +1,8 @@
 <form class="form-inline" #searchForm="ngForm" (ngSubmit)="getUserList()">
   <div class="form-group">
     <label for="userName">用户名</label>
-    <input type="text" [(ngModel)]="cpaUserDto.userName" class="form-control" id="userName" name="userName"
-           placeholder="输入要搜索的试题">
+    <input type="text" ml-sm-2 [(ngModel)]="cpaUserDto.userName" class="form-control" id="userName" name="userName"
+           placeholder="输入要搜索用户名">
   </div>
   <div class="form-group">
     <label for="">注册时间</label>
@@ -17,7 +17,7 @@
            [maxDate]="lastLoginMaxDate" bsDaterangepicker [(ngModel)]="lastLoginDaterangepickerModel"
            name="lastLoginDaterangepickerModel"/>
   </div>
-  <button type="submit" class="btn btn-default">搜索</button>
+  <button type="submit" class="btn btn-outline-info">搜索</button>
 </form>
 
 <div class="table-responsive">
