--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="header" class="Container">
 
   <!--页头开始-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-expand">
+  <nav class="navbar navbar-expand-lg navbar-light  fixed-top navbar-expand" style="background-color: #e3f2fd;">
 
     <!-- Brand and toggle get grouped for better mobile display -->
     <a class="navbar-brand" href="#">
