--- a/src/app/manager/itemmanager/updExam/upd-exam.component.html
+++ b/src/app/manager/itemmanager/updExam/upd-exam.component.html
@@ -1,11 +1,12 @@
 <form class="form-inline" #searchForm="ngForm" (ngSubmit)="getListExam()">
   <div class="form-group">
-    <label for="testStem">题干名称</label>
-    <input type="text" [(ngModel)]="cpaRepertory.testStem" class="form-control" id="testStem" name="testStem" placeholder="输入要搜索的试题">
+    <label for="testStemSearch">题干名称</label>
+    <input type="text" [(ngModel)]="cpaRepertory.testStem" class="form-control" id="testStemSearch" name="testStem"
+           placeholder="输入要搜索的试题">
   </div>
   <div class="form-group">
     <label for="testType">试题类型</label>
-    <select class="form-control" [(ngModel)]="cpaRepertory.testType" name="testType" id="testType">
+    <select class="form-control custom-select" [(ngModel)]="cpaRepertory.testType" name="testType" id="testType">
       <option></option>
       <option value="basicAccount">会计基础</option>
       <option value="cpuAccount">会计电算化</option>
@@ -15,42 +16,40 @@
   <button type="submit" class="btn btn-default">搜索</button>
 </form>
 
-<div class="table-responsive">
   <table class="table table-striped">
     <thead>
-      <tr>
-        <th>#</th>
-        <th>题干</th>
-        <th>类型</th>
-        <th>题型</th>
-        <th>时间</th>
-        <th>操作</th>
-      </tr>
+    <tr>
+      <th>#</th>
+      <th>题干</th>
+      <th>类型</th>
+      <th>题型</th>
+      <th>时间</th>
+      <th>操作</th>
+    </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of ListExam;let i = index">
-        <td>{{(bigCurrentPage-1)*pageSize+i+1}}</td>
-        <td>
+    <tr *ngFor="let item of ListExam;let i = index">
+      <td>{{(bigCurrentPage-1)*pageSize+i+1}}</td>
+      <td>
           <span triggers="mouseenter:mouseleave" container="" popover="{{item.testStem}}" placement="auto">
             {{item.testStem|sliceString:0:25:'...'}}
           </span>
 
-        </td>
-        <td>{{item.testType}}</td>
-        <td>{{item.choice}}</td>
-        <td>{{item.insertDate}}</td>
-        <!--试题ID-->
-        <!--<td>{{item.id}}</td>-->
-        <td #idEle abbr="{{item.id}}">
-          <a href="javascript:void(0)" (click)="getExamDetail(idEle)">修改</a>
-          <a href="javascript:void(0)" (click)="delExamTip(idEle)">删除</a>
-        </td>
+      </td>
+      <td>{{item.testType}}</td>
+      <td>{{item.choice}}</td>
+      <td>{{item.insertDate}}</td>
+      <!--试题ID-->
+      <!--<td>{{item.id}}</td>-->
+      <td #idEle abbr="{{item.id}}">
+        <a href="javascript:void(0)" (click)="getExamDetail(idEle)">修改</a>
+        <a href="javascript:void(0)" (click)="delExamTip(idEle)">删除</a>
+      </td>
 
-      </tr>
+    </tr>
     </tbody>
   </table>
 
-</div>
 
 
 <!--分页-->
@@ -59,7 +58,8 @@
     <!--这里添加的两个class类,是为了跟分页条保持水平对齐,分页条使用了ngxbootstrap组件,其会自动在dom中生成div,且自带类及样式,所以我将其类用到该div上,使其保持水平-->
     <div class="pagination pagination-sm fonttwig">
       <!--currentLoadSize*1是为了将currentLoadSize转型为int,否则为字符串类型-->
-      当前显示第{{(bigCurrentPage-1)*pageSize+1}}到第{{(bigCurrentPage-1)*pageSize+currentLoadSize*1}}条记录，总共{{bigTotalItems}}条记录， 每页显示
+      当前显示第{{(bigCurrentPage-1)*pageSize+1}}到第{{(bigCurrentPage-1)*pageSize+currentLoadSize*1}}条记录，总共{{bigTotalItems}}条记录，
+      每页显示
       <select [(ngModel)]="pageSize" (change)="changePageSize($event.target.value)">
         <option *ngFor="let size of pageSizeList">{{size}}</option>
       </select>条记录
@@ -67,15 +67,18 @@
   </div>
   <div class="col-md-1"></div>
   <div class="col-md-5">
-    <pagination [totalItems]="bigTotalItems" [(ngModel)]="bigCurrentPage" [maxSize]="maxSize" class="pagination-sm" [boundaryLinks]="true"
-      [rotate]="false" (numPages)="numPages = $event" [itemsPerPage]="itemsPerPage" (pageChanged)="pageChanged($event)" firstText="首页"
-      lastText="末页" nextText="下一页" previousText="上一页"></pagination>
+    <pagination [totalItems]="bigTotalItems" [(ngModel)]="bigCurrentPage" [maxSize]="maxSize" class="pagination-sm"
+                [boundaryLinks]="true"
+                [rotate]="false" (numPages)="numPages = $event" [itemsPerPage]="itemsPerPage"
+                (pageChanged)="pageChanged($event)" firstText="首页"
+                lastText="末页" nextText="下一页" previousText="上一页"></pagination>
   </div>
 </div>
 
 <!--修改试题Modal-->
-<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #udpExamModal="bs-modal" class="modal fade"
-  tabindex="-1" role="dialog" aria-hidden="true">
+<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="onHidden()" bsModal #udpExamModal="bs-modal"
+     class="modal fade"
+     tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -87,77 +90,102 @@
       <div class="modal-body">
         <form class="form-horizontal" role="form" #updExamForm="ngForm" (ngSubmit)="updExam()">
           <div class="form-group">
-            <div class="col-md-5">
-              <div class="input-group">
-                <span class="input-group-addon">题干</span>
-                <input class="form-control" [(ngModel)]="item.testStem" name="testStem">
-              </div>
-            </div>
+            <label for="testStem">题干</label>
+            <textarea id="testStem" class="form-control" [(ngModel)]="item.testStem" name="testStem"></textarea>
           </div>
-          <div class="form-group" *ngFor="let option of cpaOptions;let i of index">
-            <div class="col-md-5">
-              <div class="input-group">
-                <span class="input-group-addon">{{option.selectData}}</span>
-                <input class="form-control" [(ngModel)]="option.optionData" [name]="option.id">
-              </div>
+
+          <div class="input-group" *ngFor="let option of cpaOptions;let i of index">
+            <div class="input-group-prepend">
+              <span class="input-group-text">{{option.selectData}}</span>
             </div>
+            <input class="form-control" [(ngModel)]="option.optionData" [name]="option.id">
           </div>
+
           <div class="form-group">
             <div class="col-md-5">
               <label for="testType">试题类型</label>
-              <select class="form-control" [(ngModel)]="item.testType" name="testType">
-                <option value="null">------</option>
-                <option value="basicAccount">会计基础</option>
-                <option value="cpuAccount">会计电算化</option>
-                <option value="statuteEthics">财经法规与职业道德</option>
-              </select>
+              <div class="controls">
+
+                <select class="form-control custom-select" [(ngModel)]="item.testType" name="testType">
+                  <option value="null">------</option>
+                  <option value="basicAccount">会计基础</option>
+                  <option value="cpuAccount">会计电算化</option>
+                  <option value="statuteEthics">财经法规与职业道德</option>
+                </select>
+              </div>
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-sm-9">
-              <label class="radio-inline">
-                <input name="choice" type="radio" (click)="changeGenre('single')" value="single" [(ngModel)]="item.choice"> 单选题
-              </label>
-              <label class="radio-inline">
-                <input name="choice" type="radio" (click)="changeGenre('multiple')" value="multiple" [(ngModel)]="item.choice"> 多选题
-              </label>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="single" name="choice" value="single"
+                       [(ngModel)]="item.choice"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="single">单选题</label>
+              </div>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input name="choice" type="radio" value="multiple" id="multiple"
+                       [(ngModel)]="item.choice"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="multiple">多选题</label>
+              </div>
             </div>
           </div>
 
           <!-- 单选题DOM -->
           <div class="form-group" *ngIf="item.choice == 'single'">
             <div class="col-sm-9">
-              <label class="radio-inline">
-                <input type="radio" value="A" name="result" [(ngModel)]="cpaSolution.result"> A
-              </label>
-              <label class="radio-inline">
-                <input type="radio" value="B" name="result" [(ngModel)]="cpaSolution.result"> B
-              </label>
-              <label class="radio-inline">
-                <input type="radio" value="C" name="result" [(ngModel)]="cpaSolution.result"> C
-              </label>
-              <label class="radio-inline">
-                <input type="radio" value="D" name="result" [(ngModel)]="cpaSolution.result"> D
-              </label>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="radioA" value="A" [(ngModel)]="cpaSolution.result" name="result"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="radioA">A</label>
+              </div>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="radioB" value="B" [(ngModel)]="cpaSolution.result" name="result"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="radioB">B</label>
+              </div>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="radioC" value="C" [(ngModel)]="cpaSolution.result" name="result"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="radioC">C</label>
+              </div>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="radioD" value="D" [(ngModel)]="cpaSolution.result" name="result"
+                       class="custom-control-input">
+                <label class="custom-control-label" for="radioD">D</label>
+              </div>
             </div>
           </div>
 
           <!-- 多选题DOM -->
           <div class="form-group" *ngIf="item.choice=='multiple'">
             <div class="col-sm-9">
-              <label class="radio-inline">
-                <input type="checkbox" (click)="selectCheckbox($event.target.checked,'A')" value="A" name="result"> A
-              </label>
-              <label class="radio-inline">
-                <input type="checkbox" (click)="selectCheckbox($event.target.checked,'B')" value="B" name="result"> B
-              </label>
-              <label class="radio-inline">
-                <input type="checkbox" (click)="selectCheckbox($event.target.checked,'C')" value="C" name="result"> C
-              </label>
-              <label class="radio-inline">
-                <input type="checkbox" (click)="selectCheckbox($event.target.checked,'D')" value="D" name="result"> D
-              </label>
+              <div class="custom-control custom-checkbox custom-control-inline">
+                <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'A')"
+                       value="A" name="result"
+                       id="checkboxA">
+                <label class="custom-control-label" for="checkboxA">A</label>
+              </div>
+              <div class="custom-control custom-checkbox custom-control-inline">
+                <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'A')"
+                       value="B" name="result"
+                       id="checkboxB">
+                <label class="custom-control-label" for="checkboxB">B</label>
+              </div>
+              <div class="custom-control custom-checkbox custom-control-inline">
+                <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'C')"
+                       value="C" name="result"
+                       id="checkboxC">
+                <label class="custom-control-label" for="checkboxC">C</label>
+              </div>
+              <div class="custom-control custom-checkbox custom-control-inline">
+                <input type="checkbox" class="custom-control-input" (click)="selectCheckbox($event.target.checked,'D')"
+                       value="D" name="result"
+                       id="checkboxD">
+                <label class="custom-control-label" for="checkboxD">D</label>
+              </div>
             </div>
           </div>
 
