--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
+<!--页头Container布局开始-->
 <div id="header" class="Container">
 
-  <!--页头开始-->
+  <!--页头导航栏开始-->
   <nav class="navbar navbar-expand-lg navbar-light  fixed-top navbar-expand" style="background-color: #e3f2fd;">
 
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -9,12 +10,12 @@
     </a>
 
     <!-- 此按钮是切换到小屏幕时点击展开导航栏的按钮 -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!--这里使用[routerLink]将超链接和路由建立联接-->
       <ul class="navbar-nav mr-auto">
@@ -22,19 +23,23 @@
         <li class="nav-item active" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/home']" href="javascript:void(0)">首页</a>
         </li>
+        <!-- 导航栏下拉菜单开始 -->
         <li class="nav-item dropdown">
-          <a href="javascript:void(0)" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">在线练习
-            <!-- <span class="caret"></span> -->
+          <a href="javascript:void(0)" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+             data-toggle="dropdown" aria-haspopup="true"
+             aria-expanded="false">在线练习
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" [routerLink]="['/unitexam','basicAccount']" href="javascript:void(0)">会计基础</a>
-            <li class="dropdown-divider"></li>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['/unitexam','cpuAccount']" href="javascript:void(0)">会计电算化</a>
-            <li class="dropdown-divider"></li>
-            <a class="dropdown-item" [routerLink]="['/unitexam','statuteEthics']" href="javascript:void(0)">财经法规与职业道德</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" [routerLink]="['/unitexam','statuteEthics']"
+               href="javascript:void(0)">财经法规与职业道德</a>
           </div>
         </li>
+        <!-- 导航栏下拉菜单结束 -->
+
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link disabled" href="javascript:void(0)">模拟测验</a>
         </li>
@@ -45,47 +50,49 @@
           <a class="nav-link" [routerLink]="['/manager']" href="javascript:void(0)">管理中心</a>
         </li>
       </ul>
+      <!--导航栏搜索框开始-->
       <form class="form-inline mx-auto">
         <input class="form-control mr-sm-2" type="search" #searchValue placeholder="输入想搜索的内容" aria-label="Search">
         <button type="submit" class="btn btn-outline-success my-2 my-sm-0" (click)="search(searchValue)">搜索</button>
       </form>
-      <!-- 顶部导航栏右侧 -->
-      <ul class="navbar-nav mr-5">
-        <a class="" href="javascript:void(0)" [routerLink]="['/usercenter']">
-          <img #circleHeadImg class="img-circle  img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt="" />
-        </a>
-
-        <!-- 此下拉菜单使用的是Ngx-BootStrap -->
-        <span dropdown (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()">
-          <a class="navbar-text" href dropdownToggle (click)="false">{{userName}}
-            <span class="caret"></span>
-          </a>
-
-          <ul *dropdownMenu class="dropdown-menu">
-            <li *ngIf="!hasLogin">
-              <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
-            </li>
-            <li *ngIf="hasLogin">
-              <a class="dropdown-item" [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
-            </li>
-            <li class="dropdown-divider" *ngIf="hasLogin"></li>
-            <li *ngIf="hasLogin">
-              <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
-            </li>
-          </ul>
-        </span>
-
-        <!-- 导航栏最右侧占位 -->
-        <p class="navbar-text ">&nbsp;&nbsp;&nbsp;&nbsp;</p>
-      </ul>
+      <!--导航栏搜索框结束-->
 
     </div>
-    <!-- /.navbar-collapse -->
+
+    <!-- 顶部导航栏右侧开始 -->
+    <ul class="navbar-nav mr-5">
+      <a class="" href="javascript:void(0)" [routerLink]="['/usercenter']">
+        <img #circleHeadImg class="img-circle  img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt=""/>
+      </a>
+
+      <!--此下拉菜单使用的是Ngx-BootStrap -->
+      <span dropdown (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()">
+         <a href dropdownToggle (click)="false">{{userName}}</a>
+        <ul *dropdownMenu class="dropdown-menu">
+        <li *ngIf="!hasLogin">
+        <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
+        </li>
+        <li *ngIf="hasLogin">
+        <a class="dropdown-item" [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
+        </li>
+        <li class="dropdown-divider" *ngIf="hasLogin"></li>
+        <li *ngIf="hasLogin">
+        <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
+        </li>
+        </ul>
+    </span>
+
+      <!-- 导航栏最右侧占位 -->
+      <p class="navbar-text ">&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    </ul>
+    <!-- 顶部导航栏右侧结束 -->
+
 
   </nav>
-  <!--页头结束-->
+  <!--页头导航栏结束-->
 
 </div>
+<!--页头Container布局结束-->
 
 
 <!-- 主体内容区域 -->
